ALS-4461: Changes per PR